--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
 	"private": true,
 	"dependencies": {
 		"@material-ui/core": "^4.11.0",
+		"@material-ui/lab": "^4.0.0-alpha.56",
 		"@reduxjs/toolkit": "^1.4.0",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
-		"immutability-helper": "^3.1.1",
+		"axios": "^0.21.0",
+		"beautiful-react-diagrams": "^0.3.1",
+		"highcharts": "^8.2.2",
+		"highcharts-react-official": "^3.0.0",
 		"react": "^16.13.1",
 		"react-dnd": "^11.1.3",
 		"react-dnd-html5-backend": "^11.1.3",
